# axum-prisma

./: .env  .gitignore  Cargo.toml
.cargo/: config.toml
crates/server/: Cargo.toml
crates/server/prisma/: schema.prisma
crates/server/src/: error.rs  main.rs
crates/server/src/route/: health.rs  user.rs
crates/server/src/route/user/: get.rs  mod.rs  post.rs
prisma/: schema.prisma
src/: main.rs
src/route/: user.rs
