[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.17"
eyre = "0.6.8"
tokio = { version = "1.28.0", features = ["full"] }
serde = "1.0.160"
thiserror = "1.0.40"

[dependencies.prisma-client-rust]
git = "https://github.com/Brendonovich/prisma-client-rust"
tag = "0.6.8"
default-features = false
features = ["postgresql"]
